k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myprofile
  namespace: myprofile
  labels:
    app: myprofile
spec:
  selector:
    app: myprofile
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
